add og and twitter meta tags

--- a/index.html
+++ b/index.html
@@ -5,13 +5,33 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="src/assets/logo.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Tammy | Portfolio</title>
+  <title>Tammy | Xu Yixuan | Full Stack Dev Portfolio</title>
+  <meta name="title" content="Tammy | Xu Yixuan | Full Stack Dev Portfolio" />
+  <meta name="description"
+    content="A passionate Full Stack Developer with a foundation in PHP and JavaScript. Currently on a journey to expand my knowledge by diving into ReactJS, ThreeJS." />
+
+
+  <meta property="og:title" content="Tammy | Xu Yixuan | Full Stack Dev Portfolio">
+  <meta property="og:description"
+    content="A passionate Full Stack Developer with a foundation in PHP and JavaScript. Currently on a journey to expand my knowledge by diving into ReactJS, ThreeJS.">
+  <meta property="og:image"
+    content="https://res.cloudinary.com/dlsarhnkf/image/upload/v1715078133/3Dportfolio_screenshot_o2egqo.png">
+  <meta property="og:url" content="https://xuyixuan.com/portfolio">
+  <meta property="og:type" content="website">
+  <meta property="og:site_name" content="Tammy | Full Stack Dev Portfolio">
+
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Tammy | Xu Yixuan | Full Stack Dev Portfolio">
+  <meta name="twitter:description"
+    content="A passionate Full Stack Developer with a foundation in PHP and JavaScript. Currently on a journey to expand my knowledge by diving into ReactJS, ThreeJS.">
+  <meta name="twitter:image"
+    content="https://res.cloudinary.com/dlsarhnkf/image/upload/v1715078133/3Dportfolio_screenshot_o2egqo.png">
+
 </head>
 
 <body>
   <div id="root"></div>
   <script type="module" src="/src/main.jsx"></script>
-  <!-- <link rel="preload" as="script" href="/src/main.jsx"> -->
 </body>
 
 </html>
