change meta screenshot

--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@
   <meta property="og:title" content="Tammy | Xu Yixuan | Full Stack Dev Portfolio">
   <meta property="og:description"
     content="A passionate Full Stack Developer with a foundation in PHP and JavaScript. Currently on a journey to expand my knowledge by diving into ReactJS, ThreeJS.">
+  <!-- <meta property="og:image"
+    content="https://res.cloudinary.com/dlsarhnkf/image/upload/v1715078133/3Dportfolio_screenshot_o2egqo.png"> -->
   <meta property="og:image"
-    content="https://res.cloudinary.com/dlsarhnkf/image/upload/v1715078133/3Dportfolio_screenshot_o2egqo.png">
+    content="https://res.cloudinary.com/dlsarhnkf/image/upload/c_pad,w_1200,h_600/v1717658772/3D_portfolio-e594b174_fhc2zi.webp">
   <meta property="og:url" content="https://xuyixuan.com/portfolio">
   <meta property="og:type" content="website">
   <meta property="og:site_name" content="Tammy | Full Stack Dev Portfolio">
